URL фдрес для 2 форм, перемещен код в представения

--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Your To-Do lists</h1>
-        <form method="POST" action="/">
+        <form method="POST" action="/lists/new">
             <input id="id_new_item" name="item_text" placeholder="Enter a to-do item" />
             {% csrf_token %}
         </form>
